--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <main>
         <nav>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Главное</a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Спорт</a>
-            <a href="http://" target="_blank" rel="noopener noreferrer">Волейбол</a>
+            <a href="index.html" rel="noopener noreferrer">Главное</a>
+            <a href="http://" rel="noopener noreferrer">Спорт</a>
+            <a href="page1.html" rel="noopener noreferrer">Волейбол</a>
         </nav>
         <div class="banner">
         </div>
